k8s/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
  namespace: message-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: messagebroker-consumer:latest
          imagePullPolicy: Never
          stdin: true
          tty: true
