k8s/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-service
  namespace: message-broker
spec:
  selector:
    app: broker
  ports:
  - name: rest-api
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: communication
    protocol: TCP
    port: 8081
    targetPort: 8081
